# udemy_server

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
header_key_derive/: Cargo.toml
header_key_derive/src/: lib.rs
public/: hello.html  index.html
src/: filesystem.rs  lib.rs  main.rs  server.rs  website_handler.rs
src/http/: header.rs  method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
tests/: parallel_requests.rs
tests/fixtures/: valid_header.txt  valid_http_request.txt
