[package]
name = "udemy_server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "header_key_derive"]

[dependencies]
derive-getters = "0.4.0"
derive-new = "0.6.0"
expectest = "0.12.0"
paste = "1.0.15"
rstest = "0.21.0"
header_key_derive = { path = "./header_key_derive" }
lazy_static = "1.5.0"

[dev-dependencies]
rustfmt = "0.10.0"
